[gd_scene load_steps=2 format=3 uid="uid://bxw2rpkvk4y6k"]

[ext_resource type="Script" uid="uid://dr2ax8cxtto2x" path="res://Scripts/Gameplay/scoreboard.gd" id="1_5ihnb"]

[node name="Scoreboard" type="CanvasLayer"]
script = ExtResource("1_5ihnb")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -196.5
offset_right = 196.5
offset_bottom = 50.0
grow_horizontal = 2

[node name="Player1Score" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="PlayerName" type="Label" parent="VBoxContainer/Player1Score"]
layout_mode = 2
text = "PLAYER 1 NAME"

[node name="ScoreLabel" type="Label" parent="VBoxContainer/Player1Score"]
layout_mode = 2
text = "PLAYER 1 SCORE"

[node name="DeathCountLabel" type="Label" parent="VBoxContainer/Player1Score"]
layout_mode = 2
text = "PLAYER 1 DEATHS"

[node name="Player2Score" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="PlayerName" type="Label" parent="VBoxContainer/Player2Score"]
layout_mode = 2
text = "PLAYER 2 NAME"

[node name="ScoreLabel" type="Label" parent="VBoxContainer/Player2Score"]
layout_mode = 2
text = "PLAYER 2 SCORE"

[node name="DeathCountLabel" type="Label" parent="VBoxContainer/Player2Score"]
layout_mode = 2
text = "PLAYER 2 DEATHS"
